--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -36,7 +36,7 @@
 
 @ARTICLE{Miescher, 
 	author = {R. Dahm},
-	title = {Discovering DNA: Friedrich Miescher and the early years of nucleic acid research},
+	title = {Discovering {DNA}: Friedrich Miescher and the early years of nucleic acid research},
 	journal = {Human Genetics},
 	year = 2008,
 	volume = 122, 
@@ -81,7 +81,7 @@
 
 @ARTICLE{SWG, 
 	author = {Scheinin, I.},
-	title = {DNA Copy Number Analysis of Fresh and Formalin-Fixed Specimens by Shallow Whole-Genome Sequencing With Identification and Exclusion of Problematic Regions in the Genome Assembly.},
+	title = {{DNA} Copy Number Analysis of Fresh and Formalin-Fixed Specimens by Shallow Whole-Genome Sequencing With Identification and Exclusion of Problematic Regions in the Genome Assembly.},
 	journal = {Genome Res.},
 	year = 2014,
 	volume = 24(12), 
@@ -89,7 +89,7 @@
 }
 
 @BOOK{NIPT,
-	author = {S. Drury, M. Hill and L.S. Chitty},
+	author = {S. Drury and M. Hill and L.S. Chitty},
 	title = {Cell-Free Fetal DNA Testing for Prenatal Diagnosis},
 	year = 2016,
 	publisher = {Elsevier, Inc.}
@@ -105,7 +105,7 @@
 
 @MANUAL{SAM,
 	title = {Sequence Alignment/Map Format Specification},
-	year = 2020,
+	year = {March 2020},
 	organization = {The SAM/BAM Format Specification Working Group}
 }
 
@@ -159,7 +159,7 @@
 }
 
 @MISC{fpga100x,
-	author = {O.O. Storaasli, D. Strenski},
+	author = {O.O. Storaasli and D. Strenski},
 	year = 2011,
 	title = {Accelerating Genome Sequencing 100X with {FPGAs}},
 	howpublished = {http://ft.ornl.gov/~olaf/pubs/RSSIOlafDave.pdf}
@@ -192,7 +192,7 @@
 	year = {May 2020},
 	organization = {wikimedia},
 	title = {Double stranded {DNA} with coloured bases},
-	howpublished = {https://upload.wikimedia.org/wikipedia/commons/thumb/1/14/Double\_stranded\_DNA\_with\_coloured\_bases.png/1024px-Double\_stranded\_DNA\_with\_coloured\_bases.png}
+	howpublished = {https://en.wikipedia.org/wiki/DNA}
 }
 
 
@@ -208,14 +208,14 @@
 	year = {April 2020},
 	organization = {wikimedia},
 	title = {Human karyotype},
-	howpublished = {https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Karyotype.png/800px-Karyotype.png}
+	howpublished = {https://en.wikipedia.org/wiki/Human\_genome}
 }
 
 @MISC{Nucleotide,
 	year = {April 2020},
 	organization = {wikimedia},
 	title = {Nucleotide chemical structure (modified)},
-	howpublished = {https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/DAMP\_chemical\_structure.png/1024px-DAMP\_chemical\_structure.png}
+	howpublished = {https://en.wikipedia.org/wiki/Nucleotide}
 }
 
 @MISC{Trisomy,
@@ -230,7 +230,7 @@
 	year = {March 2020},
 	organization = {Microsoft},
 	title = {Azure machine learning {FPGA} comparison},
-	howpublished = {https://docs.microsoft.com/en-us/azure/machine-learning/service/media/concept-accelerate-with-fpgas/azure-machine-learning-fpga-comparison.png}
+	howpublished = {https://docs.microsoft.com/en-us/azure}
 }
 
 
@@ -238,7 +238,7 @@
 	year = {April 2020},
 	organization = {Lighterra},
 	title = {Sequential working of microprocessor},
-	howpublished = {http://www.lighterra.com/papers/modernmicroprocessors/sequential2.png}
+	howpublished = {http://www.lighterra.com/}
 }
 
 @MISC{Galaxy,
@@ -257,7 +257,7 @@
 
 @MISC{FPGAacc, 
 	author = {James Arram, et al},
-	title = {Leveraging FPGAs for Accelerating Short Read Alignment},
+	title = {Leveraging {FPGAs} for Accelerating Short Read Alignment},
 	year = 2015
 }
 
