--- a/bijlage1.tex
+++ b/bijlage1.tex
@@ -1,6 +1,6 @@
 \chapter{Implementation code}
 
-The implementation can also be found on Github: \href{https://github.com/robinno/refGenMapping}{https://github.com/robinno/refGenMapping}
+The implementation code can also be found on Github: \href{https://github.com/robinno/refGenMapping}{https://github.com/robinno/refGenMapping}
 
 \section{Filesystem organization}
 
